#122 Added HotelServiceTest, but request is empty