@@ -165,13 +165,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <!--
         <configuration>
           <argLine>
-          @{jaCoCoArgLine} add-opens gr2116.RESTservice/gr2116.restapi=ALL-UNNAMED
+            @{jaCoCoArgLine} --add-opens gr2116.RESTservice/gr2116.restapi=ALL-UNNAMED
           </argLine>
       </configuration>
-    -->
+    
       </plugin>
 
       <!-- run checkstyle plugin -->
@@ -190,6 +189,9 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
+        <configuration>
+          <propertyName>jaCoCoArgLine</propertyName>
+        </configuration>
       </plugin>
     </plugins>
   </build>
